# CorpusIQ

./: .env.example  .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  alembic.ini  docker-compose.full.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
backend/: check_google_models.py  requirements.txt
backend/app/embeddings/: __init__.py  base.py  google_embedder.py  openai_embedder.py
backend/app/ingestion/chunking/: __init__.py  base.py  document_aware.py  models.py  recursive.py
backend/app/ingestion/ocr/: __init__.py  detector.py  engine.py  preprocessor.py
backend/app/ingestion/parsers/: __init__.py  base.py  docx_parser.py  factory.py  pdf_parser.py  txt_parser.py  xlsx_parser.py
backend/app/ingestion/tables/: __init__.py  detector.py  extractor.py  formatter.py
backend/app/vectorstore/: __init__.py  base.py  models.py  qdrant_store.py
backend/tests/: test_chunking.py  test_embeddings_vectorstore.py  test_ocr.py  test_parsers.py  test_tables.py
backend/tests/test_files/: sample.txt
docker/: Dockerfile
docker/init-db/: 01-init.sql
src/documind/: __init__.py
src/documind/core/: __init__.py  config.py
